web-infras/parser/tests/fixtures/babel/es2015/modules/duplicate-export-default/output.txt
[SyntaxError]: Identifier has already been declared. (2,16)
2|export default function() {};
 |              ^
